--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@
                             <img src="./icons/close-icon.svg" alt="Close button">
                         </button>
                         <form class="telegram_form" id="telegram_formId">
+                            <div class="telegram_info_form">
+                                <h2 class="popup_title">Nostalgia Music Place</h2>
+                                <p class="popup_p font-family">Թողեք ձեր տվյալները և մենք կզանգահարենք Ձեզ</p>
+                            </div>
                             <div class="input_form user_name position-relative">
                                 <input type="text" name="uName" id="uName" placeholder = "" autocomplete="off" name="random-field" class="input font-family" required>
                                 <label for="uName" class="input_label position-absolute font-family">Մուտքագրեք Ձեր անունը</label>
