--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                             </li>
                         </ul>
                     </div>
-                    <button class="button header_button" id = "headerButtonFormID">ամրագրում</button>
+                    <button class="button header_button font-family" id = "headerButtonFormID">ամրագրում</button>
                     <div class="burger_menu position-relative" id = "burgerID">
                         <div class="burger_menu_content">
                             <span class="burger_line burger_line_1 display-block"></span>
@@ -93,8 +93,8 @@
                                 <input type="tel" name="uPhone" id="userTel" placeholder = "" autocomplete="off" name="random-field" class="input font-family" required>
                                 <label for="userTel" class="input_label position-absolute font-family">Մուտքագրեք Ձեր հեռախոսահամարը</label>
                             </div>
-                            <button id="submitHeaderButtonPopupID" class="submit_button">
-                                <span class="button_text">Отправить</span>
+                            <button id="submitHeaderButtonPopupID font-family" class="submit_button">
+                                <span class="button_text">Ուղարկել</span>
                                 <span class="spinner hidden"></span>
                             </button>
                         </form>
@@ -237,7 +237,7 @@
                         </ul>
                     </div>
                     <div class="button_box">
-                        <button class="button">Իմանալ ավելին</button>
+                        <button class="button font-family">Իմանալ ավելին</button>
                     </div>
                 </div>
             </div>
